@@ -1,7 +1,6 @@
 #//////////////////////////////////////////////////////////////////////////////
 #
-# Copyright (c) 2007-2010 Daniel Adler <dadler@uni-goettingen.de>, 
-#                         Tassilo Philipp <tphilipp@potion-studios.com>
+# Copyright (c) 2017 Tassilo Philipp <tphilipp@potion-studios.com>
 #
 # Permission to use, copy, modify, and distribute this software for any
 # purpose with or without fee is hereby granted, provided that the above
@@ -25,15 +24,36 @@
 #///////////////////////////////////////////////////
 
 
-TOP = ..  
+TOP = ..\..
 
 !INCLUDE $(TOP)\buildsys\nmake\prolog.nmake
 
 
-DIRS = call_suite suite suite2 suite3 suite_floats callf ellipsis plain plain_c++ nm dynload_plain resolve_self thunk malloc_wx callback_plain callback_suite
-!IF "$(BUILD_ARCH)" == "x86"
-DIRS = $(DIRS) suite_x86win32fast suite_x86win32std suite2_x86win32fast suite2_x86win32std
+!IF "$(BUILD_OS)" == "windows"
+
+TARGETS = dynload_plain.exe
+OBJS = dynload_plain.obj
+
+$(TARGETS): $(OBJS)
+	echo Linking $@ ...
+	$(LD) /OUT:"$@" $(LDFLAGS) $(OBJS) $(TOP)\dynload\libdynload_s.lib $(TOP)\dyncall\libdyncall_s.lib
+
+
+!ELSE IF "$(BUILD_OS)" == "nds"
+
+TARGETS = dynload_plain.nds
+OBJS = dynload_plain.o
+
+$(TARGETS):# $(OBJS)
+	echo Not building: There is no dynload support on this platform.
+#	echo Linking $@ ...
+#	$(LD) $(LDFLAGS) $(OBJS) $(DEVKITPRO_PATH)\libnds\lib\libnds9.a $(TOP)\dynload\libdynload_s.a $(TOP)/dyncall/libdyncall_s.a -o "$(@B).elf"
+#	$(OCP) -O binary "$(@B).elf" "$(@B).arm9"
+#	ndstool -c "$@" -9 "$(@B).arm9"
+#	del "$(@B).elf" "$(@B).arm9"
+
 !ENDIF
 
 
 !INCLUDE $(TOP)\buildsys\nmake\epilog.nmake
+
